CircleCI add test e2e
Adicionando teste end to end para ser executado no CI. Rodar e2e ajuda a
garantir a integridade dos testes.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ commands:
     description: "Roda todos os testes do projeto (unitários e integração)"
     steps:
       - run: "yarn test:cov"
+      - run: "yarn test:e2e"
 
 jobs:
   node10x: &template
